[package]
name = "metrogalaxy-nft-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.4", features = ["cargo"]}
fs_extra = "1.3.0"
futures = "0.3.28"
paris = {version = "1.5", features = ["macros"]}
rand = "0.8.5"
tokio = {version ="1.28.2", features = ["full"]}
